grammar.js
    module: ($) =>
      seq(
        optional($.package),
        repeat(choice($.import, $.using)),
        repeat(choice($._type_decl, $._expr_statement)),
      ),

    //////////////////////////////////////////////////////////////////////////

    package: ($) =>
      seq("package", optional(field("path", $._dot_path)), $._semicolon),

    import: ($) =>
      seq(
        "import",
        choice(
          seq(
            optional(field("path", seq($._dot_path, "."))),
            field("module", $.type_name),
            optional(field("sub", repeat1(seq(".", $.identifier)))),
            optional(
              choice(
                seq(".", $.wildcard),
                seq("as", field("alias", choice($.type_name, $.identifier))),
              ),
            ),
          ),
          seq(
            field(
              "path",
              seq(
                dotSep1($.package_name),
                "as",
                field("alias", choice($.type_name, $.identifier)),
              ),
            ),
          ),
          seq(field("path", repeat1(seq($.package_name, "."))), $.wildcard),
        ),
        $._semicolon,
      ),

    _expr_statement: ($) => seq($._Expr, optional($._semicolon)),

    _type_decl: ($) =>
      seq(
        field("meta", repeat($.MetaDataEntry)),
        choice($.AbstractType, $.ClassType, $.DefType, $.EnumType),
      ),

    true: (_) => "true",
    false: (_) => "false",
    null: (_) => "null",
    _dot_path: ($) => dotSep1($.package_name),

    identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_]*/,
    package_name: (_) => /[a-z_][a-zA-Z0-9_]*/,
    type_name: (_) => /[A-Z][a-zA-Z0-9_]*/,

    wildcard: (_) => "*",
    _semicolon: (_) => ";",

    comment: ($) => choice($.line_comment, $.block_comment),
    line_comment: (_) => token(seq("//", /[^\n]*/)),
    block_comment: (_) => token(seq("/*", /[^*]*\*+([^/*][^*]*\*+)*\//)),

    // ------------------------------------------------------------------------
