test/corpus/comments.txt
============
line comment
============

// This is a comment.

---

(module (comment (line_comment)))

=============
block comment
=============

/*
  This is a comment.
*/

/* This is a comment. */
/** This is a comment. **/

---

(module
  (comment (block_comment))
  (comment (block_comment))
  (comment (block_comment)))
