test/corpus/expr_decl.txt
==================
object declaration (EObjectDecl)
==================

var x = { };
var x = { a: 0 };
var x = { "a": 0 };

---

(module
  (EVars
    (identifier)
    (EObjectDecl))
  (EVars
    (identifier)
    (EObjectDecl
      (identifier)
      (Int)))
  (EVars
    (identifier)
    (EObjectDecl
      (String
        (fragment))
      (Int))))




======================================
var with three initialized declarators
======================================

var a:Int = 1, b:Int = 2, c:Int = 3;

---

(module
  (EVars
    name: (identifier)
    type: (ComplexType
      (TypePath
        name: (type_name)))
    value: (Int)
    name: (identifier)
    type: (ComplexType
      (TypePath
        name: (type_name)))
    value: (Int)
    name: (identifier)
    type: (ComplexType
      (TypePath
        name: (type_name)))
    value: (Int)))


===================================
array literal with a trailing comma
===================================

["a", "b",];

---

(module
  (EArrayDecl
    (String
      (fragment))
    (String
      (fragment))))
