test/corpus/expr_ternop.txt
================
ternop operator
================

(x != null) ? x : 0;

---

(module
  (ETernary
    cond: (EParenthesis
      (EBinop
        left: (EConst
          (identifier))
        right: (EConst
          (null))))
    if: (EConst
      (identifier))
    else: (EConst
      (Int))))
