test/corpus/expr_while.txt
================
while expression
================

while(true) i;

---

(module
  (EWhile
    cond: (true)
    body: (identifier)))

================
while expression
================

while(true) {}

---

(module
  (EWhile
    cond: (true)
    body: (EBlock)))

================
do while expression
================

do {} while(true)

---

(module
  (EWhile
    body: (EBlock)
    cond: (true)))
