test/corpus/import.txt
===========
import type
===========

import App;

---

(module
  (import
    module: (type_name)))

===================
import package path
===================

import some.other.App;

---

(module
  (import
    path: (package_name)
    path: (package_name)
    module: (type_name)))

============
import field
============

import any.other.Some.field;

---

(module
  (import
    path: (package_name)
    path: (package_name)
    module: (type_name)
    sub: (identifier)))

================
import sub field
================

import some.other.Another.field.extra.subaru;

---

(module
  (import
    path: (package_name)
    path: (package_name)
    module: (type_name)
    sub: (identifier)
    sub: (identifier)
    sub: (identifier)))

=========================
import sub field wildcard
=========================

import some.other.Another.field.extra.subaru.*;

---

(module
  (import
    path: (package_name)
    path: (package_name)
    module: (type_name)
    sub: (identifier)
    sub: (identifier)
    sub: (identifier)
    (wildcard)))

====================
import wildcard type
====================

import any.other.*;

---

(module
  (import
    path: (package_name)
    path: (package_name)
    (wildcard)))

=====================
import wildcard field
=====================

import any.other.Some.*;

---

(module
  (import
    path: (package_name)
    path: (package_name)
    module: (type_name)
    (wildcard)))

===================
import type as type
===================

import some.Type as Alias;

---

(module
  (import
    path: (package_name)
    module: (type_name)
    alias: (type_name)))

====================
import type as field
====================

import some.Type as alias;

---

(module
  (import
    path: (package_name)
    module: (type_name)
    alias: (identifier)))

====================
import field as field
====================

import some.Type.field as alias;

---

(module
  (import
    path: (package_name)
    module: (type_name)
    sub: (identifier)
    alias: (identifier)))

===============
import sub field as
===============

import some.Type.any.other.field as alias;

---

(module
  (import
    path: (package_name)
    module: (type_name)
    sub: (identifier)
    sub: (identifier)
    sub: (identifier)
    alias: (identifier)))
